@@ -10,7 +10,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300016, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300018, CPAN::Meta::Converter version 2.120921'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -29,4 +29,8 @@ requires:
   Tk::Pod: 0
   Tk::Tree: 0
   Try::Tiny: 0
-version: 1.336
+resources:
+  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Config-Model-TkUI
+  homepage: https://github.com/dod38fr/config-model-tkui/wiki
+  repository: git://github.com/dod38fr/config-model-tkui.git
+version: 1.337
