@@ -25,7 +25,8 @@ $show               = 1 if $arg =~ /s|i/;
 
 print "You can play with the widget if you run the test with 's' argument\n";
 
-my $log4perl_user_conf_file = $ENV{HOME}.'/.log4config-model' ;
+my $home = $ENV{HOME} || '';
+my $log4perl_user_conf_file = "$home/.log4config-model";
 if (-r $log4perl_user_conf_file) {
     Log::Log4perl::init($log4perl_user_conf_file);
 }
